feat: webcam shot and humidity prediction taken and sent to ThingsBoard. But image upload fails.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "soil-moisture-monitor"
 version = "0.1.0"
 description = ""
+package-mode = false
 authors = [
     {name = "DalleAntoine-99",email = "antoine.dalle59@gmail.com"}
 ]
