--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.11,<3.15"
-dependencies = ["torch (>=2.10.0,<3.0.0)", "transformers (>=5.0.0,<6.0.0)", "numpy (>=2.4.1,<3.0.0)", "scikit-learn (>=1.8.0,<2.0.0)", "pillow (>=12.1.0,<13.0.0)", "tqdm (>=4.67.1,<5.0.0)", "huggingface-hub (>=1.3.4,<2.0.0)", "torchvision (>=0.25.0,<0.26.0)"]
+dependencies = ["torch (>=2.10.0,<3.0.0)", "transformers (>=5.0.0,<6.0.0)", "numpy (>=2.4.1,<3.0.0)", "scikit-learn (>=1.8.0,<2.0.0)", "pillow (>=12.1.0,<13.0.0)", "tqdm (>=4.67.1,<5.0.0)", "huggingface-hub (>=1.3.4,<2.0.0)", "torchvision (>=0.25.0,<0.26.0)", "opencv-python (>=4.13.0.90,<5.0.0.0)", "flask (>=3.1.2,<4.0.0)", "requests (>=2.32.5,<3.0.0)"]
 
 
 [tool.poetry.dependencies]
