--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-torch
-transformers
-numpy
-scikit-learn
-pillow
-tqdm
+flask==3.1.2
+requests==2.32.5
+joblib==1.5.3
+scikit-learn==1.8.0
+torch==2.9.0
+transformers==5.0.0
+pillow==12.1.0
+numpy==2.4.1
