--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,27 @@
 [project]
 name = "soil-moisture-monitor"
-version = "0.1.0"
-description = ""
+version = "2.0.0"
+description = "Soil moisture monitoring with ResNet-50"
 authors = [
-    {name = "DalleAntoine-99",email = "antoine.dalle59@gmail.com"}
+    {name = "DalleAntoine-99", email = "antoine.dalle59@gmail.com"}
 ]
 readme = "README.md"
 requires-python = ">=3.11,<3.15"
-dependencies = ["torch (>=2.10.0,<3.0.0)", "transformers (>=5.0.0,<6.0.0)", "numpy (>=2.4.1,<3.0.0)", "scikit-learn (>=1.8.0,<2.0.0)", "pillow (>=12.1.0,<13.0.0)", "tqdm (>=4.67.1,<5.0.0)", "huggingface-hub (>=1.3.4,<2.0.0)", "torchvision (>=0.25.0,<0.26.0)", "opencv-python (>=4.13.0.90,<5.0.0.0)", "flask (>=3.1.2,<4.0.0)", "requests (>=2.32.5,<3.0.0)"]
-
+dependencies = [
+    "torch>=2.9.0,<3.0.0",
+    "transformers>=5.0.0,<6.0.0",
+    "numpy>=2.4.1,<3.0.0",
+    "scikit-learn>=1.8.0,<2.0.0",
+    "pillow>=12.1.0,<13.0.0",
+    "flask>=3.1.2,<4.0.0",
+    "requests>=2.32.5,<3.0.0",
+    "pyyaml>=6.0.3,<7.0.0",
+    "pandas>=2.2.0,<3.0.0",
+    "joblib>=1.5.3,<2.0.0"
+]
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.15"
-
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -20,5 +29,6 @@ build-backend = "poetry.core.masonry.api"
 
 [dependency-groups]
 dev = [
-    "huggingface-hub (>=1.3.4,<2.0.0)"
+    "pytest>=8.0.0,<9.0.0",
+    "black>=25.0.0,<26.0.0"
 ]
