--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.15"
+package-mode = "false"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
