--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,12 +17,15 @@ dependencies = [
     "requests>=2.32.5,<3.0.0",
     "pyyaml>=6.0.3,<7.0.0",
     "pandas>=2.2.0,<3.0.0",
-    "joblib>=1.5.3,<2.0.0"
+    "joblib>=1.5.3,<2.0.0",
+    "mapie (==0.9.1)"
 ]
+
+[tool.poetry]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.15"
-package-mode = "false"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
